# sorbetto

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: draft-pdf.yml
demos/: interactive_ranking.ipynb  interactive_roc.ipynb  interactive_roc_value_tile.ipynb  interactive_tile.ipynb  no_skill_tiles.ipynb  ranking_frontiers.ipynb  roc_to_tile.ipynb  tile_to_roc.ipynb  utils.py
demos/data/: semantic_segmentation_methods.json
doc/: Makefile  conf.py  examples.rst  index.rst  references.bib
doc/scripts/: scores_in_ROC.py  utils.py
doc/src/: authors.rst  citing.rst  contributing.rst  demos.rst  examples.rst  index.rst  install.rst  tutorial.rst
docs/: index.rst  references.bib
examples/: Pierard2024TheTile_Figure4_correlationTiles.ipynb  Pierard2024TheTile_Figure5_entityTiles.ipynb  TSW_project10.ipynb  TSW_project7.ipynb  app_developper.ipynb  correlation_tile.ipynb  correlation_tile_toy_examples.ipynb  empty_tile.ipynb  entity_tile.ipynb  entity_tile_toy_examples.ipynb  interactive_ranking.ipynb  method_designer.ipynb  no_skill_comparison.ipynb  performance_based_ranking.ipynb  ranking_tile.ipynb  score_correlations.ipynb  show_ranking_scores_in_ROC.ipynb  test_analysis.ipynb  test_tiles.ipynb  theoretical_analyst.ipynb  tile_introduction.ipynb  value_tile.ipynb
examples/data/: TSW_project10_data.json  TSW_project7_data.json  TSW_project7_data_two_classes.json
paper/: paper.bib  paper.md
sorbetto/: AbstractParameterization.py  ParameterizationAdaptedToClassPriors.py  ParameterizationAdaptedToPredictionRates.py  ParameterizationDefault.py  ___draft_of_implementation_overview___.py  __init__.py
sorbetto/analyses/: abstract_analysis.py  analysis_app_developer.py  analysis_benchmarker.py  analysis_method_designer.py  analysis_theoretical_analyst.py
sorbetto/analysis/: __init__.py  abstract_analysis.py  analysis_app_developer.py  analysis_benchmarker.py  analysis_method_designer.py  analysis_theoretical_analyst.py
sorbetto/core/: __init__.py  (+6 more)
(+97 files in other folders)
